# rse-community-challenges

./: .pre-commit-config.yaml  CONTRIBUTION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-publish-to-gh-pages.yaml  publish-to-gh-pages.yaml
docs/: _example.md  _page_spec.md  _template.md
rse-community-challenges-book/: README.md  _config.yml  _toc.yml  index.md  requirements.txt
scripts/: parse_challenge_markdown_pages.py  parse_challenge_markdown_to_toc.py  visualise_theory_of_change.py
web-app/: README.md  manage.py  pyproject.toml  requirements.txt
web-app/rse_challenges_app/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
web-app/rse_challenges_app/fixtures/: challenges.json
web-app/rse_challenges_app/migrations/: 0001_initial.py  0002_rename_challenge_description_challenge_description_and_more.py  0003_action_evidence_and_more.py
web-app/rse_challenges_app/static/scss/bootstrap/: custom.scss
web-app/rse_challenges_app/templates/: base.html  challenge.html  challenge_nav.html  index.html
web-app/rse_challenges_app/templates/challenge/: challenge_actions_and_outputs.html  challenge_active_projects.html  challenge_description.html  challenge_evidence.html  challenge_impacts.html  challenge_objectives.html  challenge_past_work.html  challenge_resources.html  challenge_section_base.html  challenge_toc.html
web-app/rse_challenges_site/: asgi.py  settings.py  urls.py  wsgi.py
web-app/scripts/: reset_data.sh
web-app/tests/rse_challenges_app/views/: test_challenge_view.py
(+16 files in other folders)
