[project]
name = "community-challenges"
version = "0.0.1"
description = "Community Challenges Wrapper"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Sam Bland", email = "sbland.co.uk@gmail.com" }]
dependencies = [
  "markdown"
]

[dependency-groups]
dev = [
  "ruff",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-mock",
]

toc_viz = [
  "networkx",
  "matplotlib",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rse_challenges_site.settings"

[tool.ruff]
exclude = ["web-app/rse_challenges_app/migrations"]
